# renesas-demo

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt  llhttp.cmake  tinycbor.cmake
lib/aws/: CMakeLists.txt
lib/config/: FreeRTOSIPConfig.h  core_mqtt_config.h  core_sntp_config.h  fleet_provisioning_config.h  ota_config.h  shadow_config.h  sigv4_config.h
lib/freertos/: CMakeLists.txt  freertos_kernel.cmake  freertos_plus_tcp.cmake
lib/mbedtls/: CMakeLists.txt  mbedtls_entropy_tsip.c  mbedtls_freertos_port.c
source/: CMakeLists.txt  app_main.c
source/cli/: CMakeLists.txt  cli.h  cli_main.c  cli_prv.h  cli_utils.c
source/include/: platform_api.h
source/logging/: CMakeLists.txt  cli_uart_drv.c  logging.c  logging.h
source/sys/: freertos_kernel_hooks.c  freertos_tcp_hooks.c
test/: CMakeLists.txt  qualification_app_main.c  test_aws_iot_device_advisor.c  test_aws_iot_ota.c  test_aws_iot_ota_pal.c  test_transport_interface.c
test/runtime/: fr_test_platform.c  fr_test_runner.c  unity_config.h
